# riemannian_metric_preservation

./: .gitignore  README.md  pyproject.toml
rmp/: __main__.py
rmp/conf/: config.yaml
rmp/conf/loss/: composed.yaml
rmp/conf/model/: mlp.yaml
rmp/conf/optim/: adam.yaml  adamw.yaml
rmp/conf/scheduler/: linear_warmup.yaml  multi_step.yaml  none.yaml
rmp/data/: __init__.py  augmentation.py  compute_conformal_maps.py  compute_depth.py  compute_image_crops.py  compute_masks.py  compute_point_cloud.py  dataset.py  geometry.py  mesh.py  normalizer.py  utils.py  visualize_matches.py
rmp/losses/: __init__.py  projection.py
rmp/models/: __init__.py  differential.py  embedder.py  mlp.py
rmp/optim/: __init__.py
